# JSGHXParser

./: AGENTS.md  JSGHXParser.code-workspace  Migratieplan_Threejs_GHX_Parser_vereenvoudigd.md  jsghxparser_nodelist_curve.json  jsghxparser_plan.md  multighx_plan.md  package.json  realistic_three.md
alpha/ghx-engine/: Cargo.toml  build.ps1
alpha/ghx-engine/scripts/: wasm_build_proof.ps1
alpha/ghx-engine/src/: lib.rs
alpha/ghx-engine/src/components/: add.rs  coerce.rs  complex.rs  construct_point.rs  curve_analysis.rs  curve_division.rs  curve_primitive.rs  curve_sampler.rs  curve_spline.rs  curve_util.rs  display_preview.rs  extrude.rs  line.rs  maths_domain.rs  maths_matrix.rs  maths_operators.rs  maths_polynomials.rs  maths_script.rs  maths_time.rs  maths_trig.rs  maths_util.rs  mesh_analysis.rs  mesh_primitive.rs  mesh_triangulation.rs  mod.rs  number_slider.rs  params_geometry.rs  params_input.rs  params_primitive.rs  params_util.rs  scalar.rs  sets_list.rs  sets_sequence.rs  sets_sets.rs  sets_text.rs  sets_tree.rs  surface_analysis.rs  surface_freeform.rs  surface_primitive.rs  surface_subd.rs  (+10 more)
alpha/ghx-engine/src/geom/: analysis.rs  boolean.rs  brep_ops.rs  bvh.rs  cache.rs  core.rs  curve.rs  curve_ops.rs  deformation.rs  diagnostics.rs  displacement.rs  extrusion.rs  fillet_chamfer.rs  loft.rs  mesh.rs  metrics.rs  mod.rs  offset.rs  patch.rs  pipe.rs  revolve.rs  simplify.rs  solid.rs  subdivision.rs  surface.rs  surface_fit.rs  surface_ops.rs  sweep.rs  tessellation.rs  triangulation.rs  trim.rs
alpha/ghx-engine/src/geom/tests/: mod.rs  test_analysis_basic.rs  test_boolean_basic.rs  test_bvh_basic.rs  test_curve_basic.rs  test_deformation_basic.rs  test_displacement_basic.rs  test_extrusion_basic.rs  test_fillet_chamfer_basic.rs  test_mesh_sanity.rs  test_patch_basic.rs  test_pipe_basic.rs  test_revolve_basic.rs  test_simplify_basic.rs  test_solid_basic.rs  test_subdivision_basic.rs  test_surface_basic.rs  test_surface_builders.rs  test_surface_curvature.rs  test_sweep_basic.rs  test_triangulation_basic.rs  test_trim_basic.rs
alpha/ghx-engine/src/graph/: evaluator.rs  internal_expression.rs  mod.rs  node.rs  topo.rs  value.rs  wire.rs
alpha/ghx-engine/src/parse/: ghx_xml.rs  mod.rs
alpha/ghx-engine/tests/: integration.rs  mesh_engine_next_golden.rs  regression_component_outputs.rs
alpha/ghx-engine/tests/fixtures/mesh_engine_next/: boolean_union.snap  deform_twist_box.snap  extrude_square_prism.snap  loft_square_prism.snap  offset_quad_outside.snap  patch_square_with_hole.snap  pipe_straight.snap  revolve_wedge.snap  sweep_square_prism.snap
nodelist/: jsghxparser_nodelist_complex.json  jsghxparser_nodelist_curve.json  jsghxparser_nodelist_curve_analysis.json  jsghxparser_nodelist_curve_division.json  jsghxparser_nodelist_curve_primitive.json  jsghxparser_nodelist_curve_spline.json  jsghxparser_nodelist_curve_util.json  jsghxparser_nodelist_display.json  jsghxparser_nodelist_display_colour.json  jsghxparser_nodelist_display_dimensions.json  (+51 more)
(+110 files in other folders)
