[package]
name = "ghx-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
debug_logs = []

[dependencies]
wildmatch = "2.2.1"
regex = "1.10.5"
levenshtein = "1.0"
wasm-bindgen = "0.2"
cfg-if = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["console"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde-wasm-bindgen = "0.6"
meval = "0.2.0"
rand = "0.9.2"
time = { version = "0.3", features = ["macros"] }
num-complex = "0.4"
delaunator = "1.0.2"
voronoice = "0.2.0"
