[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false

[build]
target-dir = "../web/pkg"

[package]
name = "ghx-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "mesh_engine_next"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
debug_logs = ["dep:wasm-bindgen-console-logger"]
parallel = ["dep:rayon", "dep:wasm-bindgen-rayon"]
mesh_engine_next = []
mesh_engine_metrics = []

[dependencies]
log = "0.4"
wasm-bindgen-console-logger = { version = "0.1.1", optional = true }
wildmatch = "2.2.1"
regex = "1.10.5"
levenshtein = "1.0"
wasm-bindgen = "0.2"
cfg-if = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", features = ["console"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde-wasm-bindgen = "0.6"
meval = "0.2.0"
rand = "0.9.2"
# The wasm_js feature is required for wasm32-unknown-unknown support in getrandom
getrandom = { version = "0.3.4", features = ["wasm_js"] }
time = { version = "0.3", features = ["macros"] }
num-complex = "0.4"
delaunator = "1.0.2"
voronoice = "0.2.0"
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }
